# jax-tutorial

./: .gitignore  pyproject.toml
notebooks/: 01_intro_Jax_Neural_Network.ipynb  02_Profundizando_JaxNN.ipynb  03_Agregando_Adam.ipynb  04_Flax.ipynb  05_Optax.ipynb  06_flax_image_classification.ipynb
