[project]
name = "jax-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.2",
    "gcsfs>=2024.12.0",
    "ipykernel>=6.29.5",
    "jax>=0.5.0",
    "matplotlib>=3.10.0",
    "tensorflow>=2.18.0",
    "tensorflow-datasets>=4.9.7",
    "treescope>=0.1.8",
]
